syntax = "proto3";

package ds.proto;

message MapPutRequest {
    int64 account_id = 1;
    string dataset = 2;
    bytes key = 3;
    bytes value = 4;
}
message MapPutResponse {}


message MapGetRequest {
    int64 account_id = 1;
    string dataset = 2;
    bytes key = 3;
}
message MapGetResponse {}


message MapDeleteRequest {
    int64 account_id = 1;
    string dataset = 2;
    bytes key = 3;
}
message MapDeleteResponse {}


message MapIteratorRequest {
    int64 account_id = 1;
    string dataset = 2;
}
message MapIteratorResponse {
    bytes key = 1;
    bytes value = 2;
}